tests/ui/fail/skip/duplicate_getters_1.stderr
error: encountered duplicate `#[skip(getters)]`
 --> tests/ui/fail/skip/duplicate_getters_1.rs:5:24
  |
5 |     #[skip(getters)] #[skip(getters)]
  |                        ^^^^

error: duplicate `#[skip(getters)]` here
 --> tests/ui/fail/skip/duplicate_getters_1.rs:5:7
  |
5 |     #[skip(getters)] #[skip(getters)]
  |       ^^^^
